# Uni

./: README.md
Semester1/ASC/: ASC Labor 6 .7z
Semester1/ASC/CURS/: Curs 1 si 2 ASC germana OC.docx  Curs 10 germana OC.docx  Curs 3 si 4 ASC germana OC.docx  Curs 5 si 6 ASC germana OC.docx  Curs 7 si 8 ASC germana OC.docx  Curs 9  germana OC.docx
Semester1/ASC/Final_Exam/: ASC Sub 1 Probl 2.docx  ASC Sub 1 Probl 5.docx  ASC Sub 1 Probl 6.docx  ASC Sub 2 Probl 3.docx  ASC Sub 3 Probl 1.docx  ASC Sub 3 Probl 4.docx  Probleme de performanta calculatoarelor.docx
Semester1/ASC/H7/: HSG7.asm
Semester1/ASC/L6/: L6.asm
Semester1/ASC/L7/: L7.asm
Semester1/ASC/Lab_Cret/: Tot Laborator 1.docx  Tot Laborator 2.docx  Tot Laborator 3.docx  Tot Laborator 4.docx  Tot Laborator 5.docx  Tot Laborator 6.docx  Tot Laborator 8.docx  Tot Laborator 9.docx
Semester1/ASC/Seminar/: Übungen Seminar 2.docx  Übungen Seminar 3.docx  Übungen Seminar 4.docx  Übungen Seminar 6.docx  Übungen Seminar 7.docx  Übungen.docx
Semester1/FP/PP_Muster/: Problema2.py  file.txt  main.py
Semester1/FP/pregatire/: Tisch.py  main.py
Semester1/FP/pythonProject1/: date2.txt  main.py
Semester1/FP/pythonProject2/: main.py
Semester1/LOGIK/Vorlesung/: puncte salvate teorie .txt  teorii rescrise scurt.txt
Semester2/AG/: AG.url
Semester2/Dynamische Systeme/: Daten.txt
Semester2/Geometrie/: Geometrie.url
Semester2/OOP/L6/: CMakeLists.txt  CRUD_Repository.h  Cars.cpp  Cars.h  Controller.cpp  Controller.h  Error.h  Repo.cpp  Repo.h  UI.cpp  UI.h  Users.cpp  Users.h  application.cpp  test.cppT
(+220 files in other folders)
